-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 17.0.0-beta2
-
None
-
c02a31b8c (17.0)
Note: This is reproducible with 100% screen scaling, and apparently not with 200%
A QItemDelegate in the ExtensionManager widget holds a QWidget and renders its content using QWidget::render(). Before the rendering, it sets various texts and pixmaps of the the widget's child widgets. The child widgets are laid out by Q*Layout.
This method used to work fine until the Qt Creator package builds switched to Qt 6.9.0. With Qt 6.9.0, the sizes of the child widgets did not update anymore after setting label texts and calling QWidget::render().
The effect is "jumping" and cut-off of labels on the upper right of each item:
A manual call of QLayout::invalidate of a specific child widget before rendering fixes the issue for Qt 6.9.0. However, this might be something to be looked at in Qt.
The correct behavior should look like this: